# python_cookiecutter_template

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
{{cookiecutter.__project_slug}}/tests/: conftest.py  test_{{cookiecutter.__package_slug}}.py
{{cookiecutter.__project_slug}}/{{cookiecutter.__package_slug}}/: __main__.py
{{cookiecutter._project_slug}}/{{cookiecutter._package_slug}}/utils/: functions.py
{{cookiecutter.project_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/utils/: errors.py
{{cookiecutter.project_slug}}/: .env.template  .gitignore  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test_pipeline.yaml
{{cookiecutter.project_slug}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
