[tool.poetry]
name = "python-cookiecutter-template"
version = "0.1.0"
description = ""
authors = ["RobinDeSmet <robin_de_smet@hotmail.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
